k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: candidstance-nodeport
  labels:
    app: candidstance-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
    name: http
  selector:
    app: candidstance-app
